<?xml version="1.0" encoding="utf-8"?>
<!--
    ~ Copyright 2022 The TensorFlow Authors. All Rights Reserved.
    ~
    ~ Licensed under the Apache License, Version 2.0 (the "License");
    ~ you may not use this file except in compliance with the License.
    ~ You may obtain a copy of the License at
    ~
    ~       http://www.apache.org/licenses/LICENSE-2.0
    ~
    ~ Unless required by applicable law or agreed to in writing, software
    ~ distributed under the License is distributed on an "AS IS" BASIS,
    ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    ~ See the License for the specific language governing permissions and
    ~ limitations under the License.
-->
<resources>
    <string name="app_name">Speed Bump Detection</string>
    <string name="returnText">Go back</string>
    <string name="camera_mode">Camera\nMode</string>
    <string name="performance_mode">Metrics\nMode</string>
    <string name="send_image">Upload\nImage</string>

    <string name="ok_message">Searching…</string>
    <string name="test_your_photo">Click on the icon above to upload an image.</string>

    <string name="ok_description">The app is monitoring the camera, searching for speed bumps signs</string>




    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>

    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing maximum detected results
        button</string>
    <string name="alt_bottom_sheet_max_results_button_plus">Increasing maximum detected results
        button</string>
    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing threshold of detected object
        results button</string>
    <string name="alt_bottom_sheet_threshold_button_plus">Increasing threshold of detected object
        results button</string>
    <string name="alt_bottom_sheet_thread_button_minus">Decrease the number of threads used</string>
    <string name="alt_bottom_sheet_thread_button_plus">Increase the number of threads used</string>

    <string name="alt_bottom_sheet_detections_required_button_minus">Decrease detections required for sound alert</string>
    <string name="alt_bottom_sheet_detections_required_button_plus">Increase detections required for sound alert</string>

    <string name="alt_bottom_sheet_detections_overlap_button_minus">Decrease detections overlap for sound alert</string>
    <string name="alt_bottom_sheet_detections_overlap_button_plus">Increase detections overlap for sound alert</string>

    <string name="label_interence_time">Inference Time</string>
    <string name="label_fps">Frames per Second</string>
    <string name="label_confidence_threshold">Threshold</string>
    <string name="label_max_results">Max Results</string>
    <string name="label_threads">Number of Threads</string>
    <string name="label_delegate">Delegate</string>
    <string name="label_models">ML Model</string>
    <string name="label_detections_required">Detections Required</string>
    <string name="label_detections_overlap">Detections Overlap</string>


    <string name="label_main_bottom_title">INFORMATION</string>
    <string name="label_main_bottom_subtitle">ABOUT THE PROJECT</string>

    <string name="label_main_bottom_info_title">HOW IT HAPPENS</string>
    <string name="label_main_bottom_info_text">The app continuously uses the image from the back camera to
        search for the speed bump signs according to the brazilian official sign, on over its 15 variations.
        When detected, the app generates a sound effect and shows a popup, indicating that a sign was detected.
        Also an icon appears on the screen on the top-right corner. </string>


    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>

    <string-array name="models_spinner_titles">
        <item>OLD</item>
        <item>WBLUR</item>
        <item>NBLUR</item>
        <item>TINY_NBLUR</item>
        <item>TINY_WBLUR</item>
        <item>TINY_WBLUR2</item>
    </string-array>

</resources>
