<!--
    ~ Copyright 2022 The TensorFlow Authors. All Rights Reserved.
    ~
    ~ Licensed under the Apache License, Version 2.0 (the "License");
    ~ you may not use this file except in compliance with the License.
    ~ You may obtain a copy of the License at
    ~
    ~       http://www.apache.org/licenses/LICENSE-2.0
    ~
    ~ Unless required by applicable law or agreed to in writing, software
    ~ distributed under the License is distributed on an "AS IS" BASIS,
    ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    ~ See the License for the specific language governing permissions and
    ~ limitations under the License.
-->
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_main_layout"
    android:layout_width="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/bottom_main_shape"
    android:minHeight="400sp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/bottom_sheet_padding"
    android:layout_height="wrap_content"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/bottom_sheet_peek_height"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">



    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60sp"
            android:gravity="left"
            android:paddingLeft="30sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_main_bottom_title"
                android:textSize="@dimen/main_info_title"
                android:layout_marginBottom="-7sp"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_main_bottom_subtitle"
                android:textSize="@dimen/main_info_subtitle"
                android:textStyle="bold"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:paddingLeft="30sp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_main_bottom_info_title"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/main_info_title"
                android:layout_marginBottom="10sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_main_bottom_info_text"
                android:textColor="@color/white"
                />
        </LinearLayout>



    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>