<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:keepScreenOn="true"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph"
        tools:context=".MainActivity"
        android:visibility="visible"
        tools:layout="@layout/fragment_camera" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginEnd="20sp"
            android:layout_marginTop="20sp"
            android:layout_gravity="end"
            android:src="@drawable/alert"
            android:id="@+id/alert_detection"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150sp"
            android:src="@drawable/check"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:fontFamily="sans-serif-light"
            android:text="@string/ok_message"
            android:layout_marginTop="250sp"
            android:textSize="48sp" />

        <TextView
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="320dp"
            android:text="@string/ok_description"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="430sp"
            android:paddingHorizontal="20sp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:orientation="vertical"
                android:background="@drawable/icon_shape"
                android:layout_marginHorizontal="10sp"
                android:layout_weight="1"
                android:id="@+id/buttonCameraMode"
                >
                <ImageView
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/camera"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingVertical="5sp"
                    android:gravity="center"
                    android:text="@string/camera_mode"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:orientation="vertical"
                android:background="@drawable/icon_shape"
                android:layout_marginHorizontal="10sp"
                android:layout_weight="1"
                >
                <ImageView
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/performance"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingVertical="5sp"
                    android:gravity="center"
                    android:text="@string/performance_mode"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:orientation="vertical"
                android:background="@drawable/icon_shape"
                android:layout_marginHorizontal="10sp"
                android:layout_weight="1"
                android:id="@+id/buttonSimulateSignDetected"
                >
                <ImageView
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/camera"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingVertical="5sp"
                    android:gravity="center"
                    android:text="@string/camera_mode"/>
            </LinearLayout>

        </LinearLayout>


    </FrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>